install(
  FILES "synthese.py"
  DESTINATION bin
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

install(
  DIRECTORY .
  DESTINATION share/synthese/tools
  PATTERN ".svn" EXCLUDE
  PATTERN "*.pyc" EXCLUDE
)

install(CODE "EXECUTE_PROCESS(COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_INSTALL_PREFIX}/bin/synthese.py --create-pyenv-only)")
