add_definitions(-DBOOST_TEST_NO_LIB -DBOOST_AUTO_TEST_MAIN)

include_directories("${PROJECT_SOURCE_DIR}/src")
include_directories("${PROJECT_SOURCE_DIR}/test/common")

macro(boost_test name deps)
  string(REPLACE "${PROJECT_SOURCE_DIR}/test/" "" prefix ${CMAKE_CURRENT_SOURCE_DIR})
  string(REPLACE "/" "_" prefix ${prefix})
  set(target "test_${prefix}_${name}Test")
  add_executable(${target} ${name}Test.cpp ${ARGN})
  target_link_libraries(${target}
    ${Boost_LIBRARIES} ${deps})
  add_test(NAME ${target} COMMAND ${target} --log_format=XML --log_sink=${target}-results.xml --log_level=all)
  if(DEFINED TESTS_ENV)
    set_tests_properties(${target} PROPERTIES ENVIRONMENT ${TESTS_ENV})
  endif()
  if(UNIX)
    set_target_properties(${target} PROPERTIES LINK_FLAGS -Wl,-no-as-needed)
  endif()
endmacro(boost_test)


add_subdirectory(00_framework)
add_subdirectory(01_util)
add_subdirectory(05_html)
add_subdirectory(07_lex_matcher)
add_subdirectory(10_db)
add_subdirectory(11_cms)
add_subdirectory(17_messages)
add_subdirectory(18_graph)
add_subdirectory(31_calendar)
add_subdirectory(20_tree)
add_subdirectory(32_geography)
add_subdirectory(34_road)
add_subdirectory(35_pt)
add_subdirectory(38_vehicle)
add_subdirectory(53_pt_routeplanner)
add_subdirectory(54_departure_boards)
add_subdirectory(55_timetables)
add_subdirectory(61_data_exchange)
